--- a/.github/workflows/environment-variables.yml
+++ b/.github/workflows/environment-variables.yml
@@ -1,26 +1,31 @@
 name: Environment Variables
 env:
   WORKSPACE_ENVIRONMENT_VARIABLE: 'custom workspace environment variable'
+  OVER_RIDE: Workflow
 on: [push]
 jobs:
   ubuntu:
     env:
       JOB_ENVIRONMENT_VARIABLE: 'custom job environment variable for ubuntu'
+      OVER_RIDE: Job
     runs-on: ubuntu-latest
     steps:
       - name: Print custom environment variables from ubuntu-latest
         env:
           STEP_ENVIRONMENT_VARIABLE: 'custom step environment variable for bash'
+          OVER_RIDE: Step
         run: |
           echo "Accessing environment variables in run command"
           echo "$WORKSPACE_ENVIRONMENT_VARIABLE"
           echo "$JOB_ENVIRONMENT_VARIABLE"
           echo "$STEP_ENVIRONMENT_VARIABLE"
+          echo "$OVER_RIDE"
           echo "------------------------------------------------------"
           echo "Accessing environment variables using env context"
           echo "${{ env.WORKSPACE_ENVIRONMENT_VARIABLE }}"
           echo "${{ env.JOB_ENVIRONMENT_VARIABLE }}"
-          echo "${{ env.STEP_ENVIRONMENT_VARIABLE }} Not defined"
+          echo "${{ env.STEP_ENVIRONMENT_VARIABLE }}"
+          ECHO "${{ env.OVER_RIDE}}"
   windows:
     env:
       JOB_ENVIRONMENT_VARIABLE: 'custom job environment variable for windows'
