--- a/.github/workflows/environment-variables.yml
+++ b/.github/workflows/environment-variables.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Print custom environment variables from ubuntu-latest
         env:
           STEP_ENVIRONMENT_VARIABLE: 'custom step environment variable for bash'
-          OVER_RIDE: Step
+          #OVER_RIDE: Step
         run: |
           echo "Accessing environment variables in run command"
           echo "$WORKSPACE_ENVIRONMENT_VARIABLE"
@@ -25,7 +25,7 @@ jobs:
           echo "${{ env.WORKSPACE_ENVIRONMENT_VARIABLE }}"
           echo "${{ env.JOB_ENVIRONMENT_VARIABLE }}"
           echo "${{ env.STEP_ENVIRONMENT_VARIABLE }}"
-          ECHO "${{ env.OVER_RIDE}}"
+          echo "${{ env.OVER_RIDE }}"
   windows:
     env:
       JOB_ENVIRONMENT_VARIABLE: 'custom job environment variable for windows'
